# tauri-eeg

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: eeg-emotion-paradigm-operation-guide.zh.md  neuro-music-integration-plan.md
music-service/: README.md  agent_planner.py  lm_studio_client.py  pyproject.toml  server.py
music-service/tests/: test_agent_planner.py  test_lm_studio_client.py  test_stable_audio3_integration.py
neuro-music-service/: MODELS.md  README.md  pyproject.toml  server.py
neuro-music-service/config/: eeg_emotion_paradigm.json
neuro-music-service/tests/: test_contract.py
neuro-music-service/tools/: build_deap_manifest.py  combine_deap_binary_predictions.py  deap_baseline_common.py  replay_deap_model_to_service.py  replay_deap_to_service.py  replay_prediction_jsonl_to_service.py  replay_seediv_to_service.py  train_deap_baseline.py  train_deap_dgcnn_binary.py  train_deap_dgcnn_subject_4class.py  train_deap_dgcnn_subject_calibration.py  train_deap_emotionclip.py  train_deap_subject_self_pretrain_4class.py  train_deap_torch_baseline.py
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  db.rs  eeg.rs  lib.rs  main.rs  music_history.rs  neuro_music_client.rs  neuro_music_service.rs  python_client.rs  python_service.rs  storage_paths.rs  video_library.rs
src/agent/: ExperimentAgentPanel.copy.test.ts  ExperimentAgentPanel.layout.test.ts  ExperimentAgentPanel.module.css  ExperimentAgentPanel.tsx  agentActions.test.ts  agentActions.ts  agentContext.test.ts  agentContext.ts  agentFlow.ts  (+9 more)
(+116 files in other folders)
