[project]
name = "tauri-eeg-music-service"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "stable-audio-3 @ git+https://github.com/Stability-AI/stable-audio-3.git",
    "pydantic==2.9.0",
]

[project.optional-dependencies]
cu128 = [
    "torch==2.7.1",
    "torchaudio==2.7.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'win32'" },
]
